--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/moralesdelahoz1103-bit/img/refs/heads/main/Fundacion-Santo-Domingo-Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Registro de Capacitaciones - Fundación Santo Domingo</title>
+    <title>Sistema de registro de asistencias - Fundación Santo Domingo</title>
   </head>
   <body>
     <div id="root"></div>
